# Informatics

./: .gitignore  README.md
1/: CMakeLists.txt  Makefile  main.c
1/model/: IntDynamicArray.c  IntHashSet.h  Matrix.h
2a/field/: Field.c
2a/game/: Game.c  Game.h
2a/stack/: Stack.h
2b/: main.c
2b/console/: ConsoleUtil.h  KeyboardInput.c  KeyboardInput.h
2b/lib/: StackList.c  StackList.h  StackVector.h
3a/: Errors.h  Makefile  main.c
3a/model/keyspace/container/: Container.h
3a/model/keyspace/key/: Key.c  Key.h
3a/model/keyspace/keyspace1/: KeySpace1.h
3a/model/keyspace/keyspace2/: KeySpace2.c
3a/model/table/: Table.c
3a/model/table/item/: Item.c
4a/: CMakeLists.txt  main.c
4a/controller/graph/: GraphGenerator.c  GraphGenerator.h
4a/model/tree/binary/: BinaryTree.c  BinaryTree.h
4a/output/: binary_tree.dot
4a/test/: test.h
4b/: Makefile  main.c  program
4b/controller/dialog/: Dialog.c  Dialog.h
4b/controller/graph/: GraphGenerator.h
4b/model/node/: Node.c  Node.h
4b/model/tree/: Tree.c  Tree.h
4b/output/: tree.dot
4b/test/: test.c  test.h
5/: CMakeLists.txt  Makefile  main.c
5/controller/dialog/: Dialog.c
5/controller/graph/: GraphGenerator.h
5/model/container/: Container.h
5/model/edge/: Edge.h
5/model/matrix/: Matrix.c  Matrix.h
5/model/node/: Node.h
5/model/vertex/: Vertex.c
5/output/: graph.dot
5/view/: Logger.h
lab0/: lab0.c
lab1/: CMakeLists.txt  DynamicArray.c  DynamicArray.h  Makefile  backup.s  lab.s  lab1.s  main.c  main.cpp  text.md
lab1/controller/: ConsoleController.c  ConsoleController.cpp  ConsoleController.h  MatrixController.cpp  MatrixController.h
lab1/lib/model/: Scanner.cpp  Scanner.h
lab1/model/: IntDynamicArray.c  IntDynamicArray.h  IntHashSet.c  IntHashSet.h  Item.cpp  Item.h  Line.cpp  Line.h  List.h  Matrix.c  Matrix.cpp  Matrix.h
lab1/models/: DynamicArray.c  DynamicArray.h  StructInfo.c  StructInfo.h
lab2/: CMakeLists.txt  Makefile  lab.s  lab_exactly_odd_event_sort.s  main.c  main.cpp
lab2/Controller/GameController/: GameController.c  GameController.h
lab2/Model/Game/: Game.c  Game.h
lab2/console/: Color.c  Color.h  ConsoleUtil.c
lab2/field/: Field.c  Field.h
lab2/game/: Game.c
lab2/lib/: Makefile  StackList.c  StackList.h  StackVector.c  StackVector.h
lab2/lib/controller/: Dialog.cpp  Dialog.h
lab2/lib/model/: Action.h
lab2/math/: Math.c  Math.h
lab2/model/: Cardioid.cpp  Cardioid.h
lab2/point/: Point.h
lab2/stack/: Stack.h  StackList.c  StackList.h  StackVector.c  StackVector.h
lab2/test/: CMakeLists.txt  test.cpp
lab2/without_flag/: lab.s
lab3/: CMakeLists.txt  Makefile  main.c  main.cpp  main1.c  main2.c  myctype.c  myctype.h  myreadline.c  myreadline.h  mystring.c  mystring.h
lab3/controller/dialog/: Dialog.c  Dialog.h
lab3/controller/iterator/: Iterator.c  Iterator.h  IteratorKS.c  IteratorKS.h
lab3/controller/keyspace/: IteratorKS.c  IteratorKS.h  IteratorKS1.c  IteratorKS1.h  KeySpace1Controller.c  KeySpace1Controller.h  KeySpaceController.c  KeySpaceController.h
lab3/model/: Table.cpp  Table.h
lab3/model/keyspace/container/: Container.c  Container.h  Waymark.c
lab3/model/keyspace/item/: Item.c  Item.h  Waymark.h
lab3/model/keyspace/key/: Key.c  Key.h
lab3/model/keyspace/keyspace1/: Item1.c  Item1.h  Key1.c  Key1.h  KeySpace1.c  KeySpace1.h
lab3/model/keyspace/keyspace2/: Key2.c  Key2.h  KeySpace2.c  KeySpace2.h
lab3/model/keyspace/node/: Node.c  Node.h
lab3/model/table/: CompositeKey.c  CompositeKey.h  Table.c  Table.h
lab3/model/table/item/: Info.c  Info.h  Item.c  Item.h
lab3/test/: test.cpp
lab3/view/: Logger.c  Logger.h
lab4/: .gitignore  CMakeLists.txt  Makefile  Voter.c  Voter.h  file.txt  file1.txt  input.c  input.h  main.c  output.c  output.h  program  sort.c  sort.h
lab4/controller/dialog/: Dialog.c  Dialog.h
lab4/controller/graph/: GraphGenerator.c  GraphGenerator.h
lab4/model/tree/binary/: BNode.h  BinaryTree.c  BinaryTree.h
lab4/output/: binary_tree.dot
lab4/test/: test.c  test.h
lab4b/: CMakeLists.txt  Makefile  main.c
lab4b/controller/dialog/: Dialog.c  Dialog.h
lab4b/controller/graph/: GraphGenerator.c  GraphGenerator.h
lab4b/model/item/: Item.c  Item.h
lab4b/model/key/: Key.c  Key.h
lab4b/model/node/: Node.c  Node.h
lab4b/model/tree/: Tree.c  Tree.h
lab4b/output/: binary_tree.dot  tree.dot
lab4b/test/: test.c  test.h
lab5/: Makefile  main.c  matrix.c  matrix.h  wed
lab5/controller/dialog/: Dialog.c  Dialog.h
lab5/controller/graph/: GraphGenerator.c
lab5/model/container/: Container.c
lab5/model/edge/: Edge.c
lab5/model/node/: Node.c
lab5/model/vertex/: Vertex.h
lab5/output/: graph.dot
lab5/view/: Logger.c
lab6/: List.c  List.h  Makefile  main.c
lec1/: CMakeLists.txt
lesson26.02/: CMakeLists.txt  main.c
